SFUSA/force-app/main/default/objects/Case/fields/Case_Dates__c.field-meta.xml
<CustomField>
        <fullName>Case_Dates__c</fullName>
        <description>This field contains the Active At, Opened At, First Resolved At and Resolved At dates values, with proper format.</description>
        <inlineHelpText>This field contains the Active At, Opened At, First Resolved At and Resolved At dates values, with proper format.</inlineHelpText>
        <label>Case Dates</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>