SFUSA/force-app/main/default/objects/Case/fields/Case_Language__c.field-meta.xml
<CustomField>
        <fullName>Case_Language__c</fullName>
        <label>Case Language</label>
        <length>15</length>
        <type>Text</type>
    </CustomField>