SFUSA/force-app/main/default/objects/Case/fields/Case_Number_Desk_com__c.field-meta.xml
<CustomField>
        <fullName>Case_Number_Desk_com__c</fullName>
        <description>Case Number from Desk.com</description>
        <label>Case Number (Desk.com)</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>