SFUSA/force-app/main/default/objects/Case/fields/Case_Owner_Manager__c.field-meta.xml
<CustomField>
        <fullName>Case_Owner_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp;' ' &amp;Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Manager</label>
        <type>Text</type>
    </CustomField>