SFUSA/force-app/main/default/objects/Case/fields/Case_Postal_Code__c.field-meta.xml
<CustomField>
        <fullName>Case_Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>