SFUSA/force-app/main/default/objects/Case/fields/Case_State__c.field-meta.xml
<CustomField>
        <fullName>Case_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>