SFUSA/force-app/main/default/objects/Case/fields/Case_Time_Hour__c.field-meta.xml
<CustomField>
        <fullName>Case_Time_Hour__c</fullName>
        <formula>VALUE(MID(Created_Time__c,0,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Time (Hour)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>