SFUSA/force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bailment</fullName>
                </value>
                <value>
                    <fullName>Changes</fullName>
                </value>
                <value>
                    <fullName>EDI Order</fullName>
                </value>
                <value>
                    <fullName>Escalated Form</fullName>
                </value>
                <value>
                    <fullName>GMDM</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Inquiry (Internal)</fullName>
                </value>
                <value>
                    <fullName>Order Claim</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>OTC Billing</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>PTP/AP</fullName>
                </value>
                <value>
                    <fullName>Quality Claim</fullName>
                </value>
                <value>
                    <fullName>RTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>