SFUSA/force-app/main/default/objects/Case/fields/Cases_Affected__c.field-meta.xml
<CustomField>
        <fullName>Cases_Affected__c</fullName>
        <label>Cases Affected</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>