SFUSA/force-app/main/default/objects/Case/fields/Category_1__c.field-meta.xml
<CustomField>
        <fullName>Category_1__c</fullName>
        <label>Primary Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
                <value>
                    <fullName>Audit request</fullName>
                </value>
                <value>
                    <fullName>Bailment</fullName>
                </value>
                <value>
                    <fullName>Bailment Inventory</fullName>
                </value>
                <value>
                    <fullName>Canada Commissions</fullName>
                </value>
                <value>
                    <fullName>Canada Inquiries</fullName>
                </value>
                <value>
                    <fullName>Canada TPM</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Cannot Print Invoice</fullName>
                </value>
                <value>
                    <fullName>Chart of Accounts &amp; Mapping</fullName>
                </value>
                <value>
                    <fullName>Compensation Requests</fullName>
                </value>
                <value>
                    <fullName>Concur Profile Request</fullName>
                </value>
                <value>
                    <fullName>Corporate Card Status</fullName>
                </value>
                <value>
                    <fullName>Correct Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Approval</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>D2D Transfer</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>Employee Administration</fullName>
                </value>
                <value>
                    <fullName>Employee Inquiries</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Financial Invoice Request</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Global Mobility</fullName>
                </value>
                <value>
                    <fullName>Health Benefits</fullName>
                </value>
                <value>
                    <fullName>HR Information Requests</fullName>
                </value>
                <value>
                    <fullName>HR/Total Rewards Correspondence</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Immigration</fullName>
                </value>
                <value>
                    <fullName>Invoice Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>