SFUSA/force-app/main/default/objects/Case/fields/Category_2__c.field-meta.xml
<CustomField>
        <fullName>Category_2__c</fullName>
        <label>Secondary Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>401k</fullName>
                </value>
                <value>
                    <fullName>Add Output</fullName>
                </value>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Address Change(s)</fullName>
                </value>
                <value>
                    <fullName>Adjustment PD</fullName>
                </value>
                <value>
                    <fullName>ADP ESS inquires</fullName>
                </value>
                <value>
                    <fullName>Asset Tagging</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Audits</fullName>
                </value>
                <value>
                    <fullName>Awards</fullName>
                </value>
                <value>
                    <fullName>Background/Screenings</fullName>
                </value>
                <value>
                    <fullName>Bailment Inventory</fullName>
                </value>
                <value>
                    <fullName>Bailment inventory reporting</fullName>
                </value>
                <value>
                    <fullName>Barrel Invoice Correction</fullName>
                </value>
                <value>
                    <fullName>Billing Posting - OTC</fullName>
                </value>
                <value>
                    <fullName>BOMs</fullName>
                </value>
                <value>
                    <fullName>Bonuses</fullName>
                </value>
                <value>
                    <fullName>Bulk Invoice Correction</fullName>
                </value>
                <value>
                    <fullName>CA PTO Notifications</fullName>
                </value>
                <value>
                    <fullName>Cancel Invoice</fullName>
                </value>
                <value>
                    <fullName>Candidate Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Case Goods Invoice Correction</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>COBRA</fullName>
                </value>
                <value>
                    <fullName>Collections (Former Employees)</fullName>
                </value>
                <value>
                    <fullName>Commissions</fullName>
                </value>
                <value>
                    <fullName>Commuter Benefits</fullName>
                </value>
                <value>
                    <fullName>Company correspondence</fullName>
                </value>
                <value>
                    <fullName>Connection</fullName>
                </value>
                <value>
                    <fullName>Cost Center Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>