SFUSA/force-app/main/default/objects/Case/fields/Category_3__c.field-meta.xml
<CustomField>
        <fullName>Category_3__c</fullName>
        <label>Tertiary Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category_2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>CIP Reporting</fullName>
                </value>
                <value>
                    <fullName>Cost Center / IO Reclassification</fullName>
                </value>
                <value>
                    <fullName>Cost Center Detail</fullName>
                </value>
                <value>
                    <fullName>Cost Center Reclassification</fullName>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Deprecation Pull</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Expiration</fullName>
                </value>
                <value>
                    <fullName>Extend</fullName>
                </value>
                <value>
                    <fullName>FI Invoice Costing</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset Sub-Ledger</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>FX Revaluation</fullName>
                </value>
                <value>
                    <fullName>G/L Account Reclassification</fullName>
                </value>
                <value>
                    <fullName>Intercompany</fullName>
                </value>
                <value>
                    <fullName>Inventory Adjustment</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>PAB Form - Attached</fullName>
                </value>
                <value>
                    <fullName>PAB Form - Request</fullName>
                </value>
                <value>
                    <fullName>Partner Function</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Service Charge</fullName>
                </value>
                <value>
                    <fullName>Supporting Documentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>