SFUSA/force-app/main/default/objects/Case/fields/Certificate_of_Age__c.field-meta.xml
<CustomField>
        <fullName>Certificate_of_Age__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate of Age?</label>
        <type>Checkbox</type>
    </CustomField>