SFUSA/force-app/main/default/objects/Case/fields/Certificate_of_Origin__c.field-meta.xml
<CustomField>
        <fullName>Certificate_of_Origin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate of Origin?</label>
        <type>Checkbox</type>
    </CustomField>