SFUSA/force-app/main/default/objects/Case/fields/Change_Description__c.field-meta.xml
<CustomField>
        <fullName>Change_Description__c</fullName>
        <label>Change Description</label>
        <type>TextArea</type>
    </CustomField>