SFUSA/force-app/main/default/objects/Case/fields/Change_Escalation_Time_After_3__c.field-meta.xml
<CustomField>
        <fullName>Change_Escalation_Time_After_3__c</fullName>
        <description>If the Case was created before the end of day (when the SLA Start Time would have updated to the next available business day and start time), we just push out the Change Case Escalation date 48 hours (or enough time for the SLA Start Time to update later that evening).  If the case was created after the SLA End Time for the day, the Case Escalation date will equal SLA Start Time + 5 hours (12:30pm, assuming a 7:30am start).</description>
        <formula>IF( DATEVALUE(CreatedDate) = DATEVALUE(SLA_End_Time__c), SLA_Start_Time__c + 2, SLA_Start_Time__c)</formula>
        <label>Change Escalation Time (After 3)</label>
        <type>DateTime</type>
    </CustomField>