SFUSA/force-app/main/default/objects/Case/fields/Check_Number__c.field-meta.xml
<CustomField>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>