SFUSA/force-app/main/default/objects/Case/fields/Child_case_fields_missing__c.field-meta.xml
<CustomField>
        <fullName>Child_case_fields_missing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Financial Disposition and Return SAP Number are required to close the parent case, this field will be set to true if either of those fields are missing from the child cases for recordtype of "Order Claim Sub Case"</description>
        <label>Child case fields missing</label>
        <type>Checkbox</type>
    </CustomField>