SFUSA/force-app/main/default/objects/Case/fields/City__c.field-meta.xml
<CustomField>
        <fullName>City__c</fullName>
        <formula>Contact.OtherCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </CustomField>