SFUSA/force-app/main/default/objects/Case/fields/Claim_Amount_Approved__c.field-meta.xml
<CustomField>
        <fullName>Claim_Amount_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim Amount Approved?</label>
        <type>Checkbox</type>
    </CustomField>