SFUSA/force-app/main/default/objects/Case/fields/Color__c.field-meta.xml
<CustomField>
        <fullName>Color__c</fullName>
        <label>Color %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>