SFUSA/force-app/main/default/objects/Case/fields/Company__c.field-meta.xml
<CustomField>
        <fullName>Company__c</fullName>
        <formula>Contact.Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </CustomField>