SFUSA/force-app/main/default/objects/Case/fields/Company_Code__c.field-meta.xml
<CustomField>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APP1 - APSA Other Purchase Acc</fullName>
                </value>
                <value>
                    <fullName>AT50 - Beam Austria GmbH [AT]</fullName>
                </value>
                <value>
                    <fullName>AT60 - Mozart Distillierie GmbH</fullName>
                </value>
                <value>
                    <fullName>AU60 - Beam Global (Australia) [AU]</fullName>
                </value>
                <value>
                    <fullName>AU70 - Suntory (Aust) Pty Ltd [AU]</fullName>
                </value>
                <value>
                    <fullName>AUP1 - Australia Purchase Acc</fullName>
                </value>
                <value>
                    <fullName>BR50 - JBB Bebidas Brasil Lim. [BR]</fullName>
                </value>
                <value>
                    <fullName>BR70 - Suntory Brazil</fullName>
                </value>
                <value>
                    <fullName>CA30 - Alberta Distillers Ltd [CA]</fullName>
                </value>
                <value>
                    <fullName>CA40 - Jim Beam Brands Canada [CA]</fullName>
                </value>
                <value>
                    <fullName>CA60 - Beam Global Canada Inc. [CA]</fullName>
                </value>
                <value>
                    <fullName>CA70 - Canadian Club Canada, Inc [CA]</fullName>
                </value>
                <value>
                    <fullName>CAE1 - Canadian Parent Co. Adjus [CA]</fullName>
                </value>
                <value>
                    <fullName>CAE2 - Canada Eliminations Restr [CA]</fullName>
                </value>
                <value>
                    <fullName>CAF1 - ADL Finance 1 [CA]</fullName>
                </value>
                <value>
                    <fullName>CAF2 - ADL Finance 2 [CA]</fullName>
                </value>
                <value>
                    <fullName>CAP1 - Canada Purchase Accountin</fullName>
                </value>
                <value>
                    <fullName>CN60 - Suntory (China) Holding</fullName>
                </value>
                <value>
                    <fullName>COP1 - Corporate Purchase Acc</fullName>
                </value>
                <value>
                    <fullName>DE10 - BG Deutschland Operations [DE]</fullName>
                </value>
                <value>
                    <fullName>DE40 - Beam Deutschland GmbH [DE]</fullName>
                </value>
                <value>
                    <fullName>DE41 - Beam Deutschland GmbH GBS [DE]</fullName>
                </value>
                <value>
                    <fullName>DE50 - BGSW Deutschland [DE]</fullName>
                </value>
                <value>
                    <fullName>DE5A - BG Beteiligungs GmbH [DE]</fullName>
                </value>
                <value>
                    <fullName>DE5B - Weinbrennerei Jacobi GMBH [DE]</fullName>
                </value>
                <value>
                    <fullName>DE5C - Fuerstl' v. Bismarck'sche [DE]</fullName>
                </value>
                <value>
                    <fullName>DE5D - Kuemmerling GmbH [DE]</fullName>
                </value>
                <value>
                    <fullName>DE5E - TMV [DE]</fullName>
                </value>
                <value>
                    <fullName>DE5F - Unigetranke Handelgesell. [DE]</fullName>
                </value>
                <value>
                    <fullName>DE60 - Beam Global Duty Free [DE]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>